[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "thiliapr-tools"
version = "1.0.1"
authors = [
  { name="thiliapr" },
]
description = "A library by thiliapr."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/thiliapr/python3-tprtools"
Issues = "https://github.com/thiliapr/python3-tprtools/issues"
